[gd_scene load_steps=8 format=2]

[ext_resource path="res://ball/bola2-b.png" type="Texture" id=1]
[ext_resource path="res://environment/barra5.png" type="Texture" id=2]
[ext_resource path="res://environment/gift-green.png" type="Texture" id=3]
[ext_resource path="res://PanelColisiones.gd" type="Script" id=4]
[ext_resource path="res://CheckBox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="PanelColisiones" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -512.0
color = Color( 0.180392, 0.231373, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" type="Control" parent="."]
margin_right = 288.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball-menu" type="Sprite" parent="TopMenu"]
position = Vector2( 48, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="lay-ball-lab" type="Label" parent="TopMenu"]
margin_left = 24.0
margin_top = 40.0
margin_right = 58.0
margin_bottom = 54.0
text = "Layer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lay-ball-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 24.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 72.0

[node name="lay-ball-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 40.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 72.0

[node name="lay-ball-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 56.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 72.0

[node name="mask-bal-lab" type="Label" parent="TopMenu"]
margin_left = 24.0
margin_top = 72.0
margin_right = 57.0
margin_bottom = 86.0
text = "Mask"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mask-ball-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 24.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 104.0

[node name="mask-ball-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 40.0
margin_top = 80.0
margin_right = 64.0
margin_bottom = 104.0

[node name="mask-ball-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 56.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 104.0

[node name="gift-menu" type="Sprite" parent="TopMenu"]
position = Vector2( 144, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="lay-gift-lab" type="Label" parent="TopMenu"]
margin_left = 120.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 54.0
text = "Layer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lay-gift-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 120.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 72.0

[node name="lay-gift-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 136.0
margin_top = 48.0
margin_right = 160.0
margin_bottom = 72.0

[node name="lay-gift-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 152.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 72.0

[node name="mask-gift-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 120.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 104.0

[node name="mask-gift-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 136.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 104.0

[node name="mask-gift-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 152.0
margin_top = 80.0
margin_right = 176.0
margin_bottom = 104.0

[node name="mask-gift-lab" type="Label" parent="TopMenu"]
margin_left = 120.0
margin_top = 72.0
margin_right = 160.0
margin_bottom = 86.0
text = "Mask"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block-menu" type="Sprite" parent="TopMenu"]
position = Vector2( 240, 24 )
scale = Vector2( 1.25, 1.5 )
texture = ExtResource( 2 )

[node name="lay-block-lab" type="Label" parent="TopMenu"]
margin_left = 208.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 54.0
text = "Layer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lay-block-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 208.0
margin_top = 48.0
margin_right = 232.0
margin_bottom = 72.0

[node name="lay-block-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 224.0
margin_top = 48.0
margin_right = 248.0
margin_bottom = 72.0

[node name="lay-block-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 240.0
margin_top = 48.0
margin_right = 264.0
margin_bottom = 72.0

[node name="mask-block-lab" type="Label" parent="TopMenu"]
margin_left = 208.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 86.0
text = "Mask"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mask-block-1" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 208.0
margin_top = 80.0
margin_right = 232.0
margin_bottom = 104.0

[node name="mask-block-2" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 224.0
margin_top = 80.0
margin_right = 248.0
margin_bottom = 104.0

[node name="mask-block-3" parent="TopMenu" instance=ExtResource( 5 )]
margin_left = 240.0
margin_top = 80.0
margin_right = 264.0
margin_bottom = 104.0

[node name="restart" type="Button" parent="TopMenu"]
margin_left = 64.0
margin_top = 104.0
margin_right = 216.0
margin_bottom = 124.0
text = "Restart (press R)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Lines"]
position = Vector2( 0, 24 )
points = PoolVector2Array( 0, 112, 288, 112 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D7" type="Line2D" parent="Lines"]
position = Vector2( 0, -16 )
points = PoolVector2Array( 0, 16, 288, 16 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D8" type="Line2D" parent="Lines"]
position = Vector2( 0, -16 )
points = PoolVector2Array( 0, 16, 0, 528 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D9" type="Line2D" parent="Lines"]
position = Vector2( 0, -16 )
points = PoolVector2Array( 288, 16, 288, 528 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D2" type="Line2D" parent="Lines"]
position = Vector2( 0, -16 )
points = PoolVector2Array( 96, 152, 96, 528 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D6" type="Line2D" parent="Lines"]
position = Vector2( 0, -16 )
points = PoolVector2Array( 0, 528, 288, 528 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Line2D3" type="Line2D" parent="Lines"]
position = Vector2( 0, -223.278 )
scale = Vector2( 1, 1.38889 )
points = PoolVector2Array( 192, 258.68, 192, 528 )
width = 5.0
default_color = Color( 0.113725, 0.466667, 0.356863, 1 )

[node name="Ej-1" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="ball-1" type="RigidBody2D" parent="Ej-1"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-1/ball-1"]
position = Vector2( 48, 168 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-1/ball-1"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-1/ball-1"]
visible = false
margin_left = 16.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block-1" type="RigidBody2D" parent="Ej-1"]
position = Vector2( 0, 112 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-1/block-1"]
position = Vector2( 48, 168 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-1/block-1"]
position = Vector2( 48, 168 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Ej-1/block-1"]
visible = false
margin_left = 8.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gift-1" type="RigidBody2D" parent="Ej-1"]
position = Vector2( 0, 224 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-1/gift-1"]
position = Vector2( 48, 168 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-1/gift-1"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-1/gift-1"]
visible = false
margin_left = 16.0
margin_top = 136.0
margin_right = 64.0
margin_bottom = 152.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test1_but" type="Button" parent="Ej-1"]
margin_left = 16.0
margin_top = 456.0
margin_right = 80.0
margin_bottom = 480.0
text = "Press 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ej-2" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="ball-2" type="RigidBody2D" parent="Ej-2"]
position = Vector2( 96, 112 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-2/ball-2"]
position = Vector2( 48, 168 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-2/ball-2"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-2/ball-2"]
visible = false
margin_left = 16.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block-2" type="RigidBody2D" parent="Ej-2"]
position = Vector2( 96, 0 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-2/block-2"]
position = Vector2( 48, 168 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-2/block-2"]
position = Vector2( 48, 168 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Ej-2/block-2"]
visible = false
margin_left = 8.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gift-2" type="RigidBody2D" parent="Ej-2"]
position = Vector2( 96, 224 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-2/gift-2"]
position = Vector2( 48, 168 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-2/gift-2"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-2/gift-2"]
visible = false
margin_left = 16.0
margin_top = 136.0
margin_right = 64.0
margin_bottom = 152.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test2_but" type="Button" parent="Ej-2"]
margin_left = 112.0
margin_top = 456.0
margin_right = 176.0
margin_bottom = 480.0
text = "Press 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ej-3" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="ball-3" type="RigidBody2D" parent="Ej-3"]
position = Vector2( 192, 224 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-3/ball-3"]
position = Vector2( 48, 168 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-3/ball-3"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-3/ball-3"]
visible = false
margin_left = 16.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block-3" type="RigidBody2D" parent="Ej-3"]
position = Vector2( 192, 112 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-3/block-3"]
position = Vector2( 48, 168 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-3/block-3"]
position = Vector2( 48, 168 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Ej-3/block-3"]
visible = false
margin_left = 8.0
margin_top = 144.0
margin_right = 48.0
margin_bottom = 160.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gift-3" type="RigidBody2D" parent="Ej-3"]
position = Vector2( 192, 0 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ej-3/gift-3"]
position = Vector2( 48, 168 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ej-3/gift-3"]
position = Vector2( 48, 168 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Ej-3/gift-3"]
visible = false
margin_left = 16.0
margin_top = 136.0
margin_right = 64.0
margin_bottom = 152.0
text = "b_entered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test3_but" type="Button" parent="Ej-3"]
margin_left = 208.0
margin_top = 456.0
margin_right = 272.0
margin_bottom = 480.0
text = "Press 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TopMenu/restart" to="." method="_on_test1_but2_pressed"]
[connection signal="body_entered" from="Ej-1/ball-1" to="." method="_on_ball1_body_entered"]
[connection signal="body_entered" from="Ej-1/block-1" to="." method="_on_block1_body_entered"]
[connection signal="body_entered" from="Ej-1/gift-1" to="." method="_on_gift1_body_entered"]
[connection signal="pressed" from="Ej-1/test1_but" to="." method="_on_test1_but_pressed"]
[connection signal="body_entered" from="Ej-2/ball-2" to="." method="_on_ball1_body_entered"]
[connection signal="body_entered" from="Ej-2/block-2" to="." method="_on_block1_body_entered"]
[connection signal="body_entered" from="Ej-2/gift-2" to="." method="_on_gift1_body_entered"]
[connection signal="pressed" from="Ej-2/test2_but" to="." method="_on_test2_but_pressed"]
[connection signal="body_entered" from="Ej-3/ball-3" to="." method="_on_ball1_body_entered"]
[connection signal="body_entered" from="Ej-3/block-3" to="." method="_on_block1_body_entered"]
[connection signal="body_entered" from="Ej-3/gift-3" to="." method="_on_gift1_body_entered"]
[connection signal="pressed" from="Ej-3/test3_but" to="." method="_on_test3_but_pressed"]
